examples/bad/ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION/sequencing_non_unit_type1.st
language core;
extend with #sequencing;

fn main(n : Nat) -> Nat {
	return (fn(a : Nat) { return 0 }) (0); 0
}


//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
